--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MartPlace</title>
-    <link rel="stylesheet" href="css/lips.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-    
+    <header class="header">
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <div class="header__logo">
+                        <a href="#"><img src="images/logo.png" alt=""></a>
+                    </div>
+                    <div class="header__btn">
+                        <button>Become a Seller</button>
+                    </div>
+                    <div class="header__avatar">
+                        <div class="header__avatar-img">
+                            <img src="images/icons/avatar.png" alt="">
+                        </div>
+                        <div class="header__avatar-naming">
+                            <div class="header__avatar-name">Taofiq Hakim</div>
+                            <div class="header__avatar-price">$20.45</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="header__menu">
+            <div class="container">
+                <nav class="menu">
+                    <ul class="header__menu-list">
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">all products</a></li>
+                        <li><a href="#">wordpress</a></li>
+                        <li><a href="#">festures</a></li>
+                        <li><a href="#">Pages</a></li>
+                    </ul>
+                    <div class="header__menu-search">
+                    <form>
+                        <input type="text" placeholder="Search product here...">
+                        <button class="submit"><img src="images/icons/search.png" alt=""></button>
+                    </form>
+                </div>
+                </nav>
+                
+            </div>
+        </div>
+
+    </header>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
