added search secton

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+
+    <!-- _____________________________HEADER -->
+
     <header class="header">
         <div class="header__top">
             <div class="container">
@@ -45,18 +48,55 @@
                         <li><a href="#">Pages</a></li>
                     </ul>
                     <div class="header__menu-search">
-                    <form>
-                        <input type="text" placeholder="Search product here...">
-                        <button class="submit"><img src="images/icons/search.png" alt=""></button>
-                    </form>
-                </div>
+                        <form>
+                            <input type="text" placeholder="Search product here...">
+                            <button class="submit"><img src="images/icons/search.png" alt=""></button>
+                        </form>
+                    </div>
                 </nav>
-                
+
             </div>
         </div>
 
     </header>
 
+
+
+
+    <!-- _____________________________SECTION search -->
+    <section class="search">
+        <div class="container-fluid">
+            <div class="search__inner">
+                <div class="serch__inner-info">
+                    <h1>Create Your Own
+                        <span>Digital Product Marketplace</span></h1>
+                    <p>MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products</p>
+                    <div class="search__inne-btn">
+                        <button><a href="#">View All Products</a></button>
+                        <button><a href="#">Popular Products</a></button>
+                    </div>
+                </div>
+                <div class="serch__inner-box1"></div>
+                <div class="serch__inner-box2"></div>
+                <div class="serch__inner-box">
+                    <form class="kurwa">
+                        <input type="text" placeholder="Search product here...">
+                        <button class="search-nav">All Categories</button>
+                        <div class="form-btn">
+                            <button class="Search Now">Search Now</button>
+                        </div>
+                    </form>
+
+                </div>
+                <div class="serch__inner-box1"></div>
+                <div class="serch__inner-box2"></div>
+            </div>
+
+        </div>
+
+
+
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
