--- a/app/index.html
+++ b/app/index.html
@@ -57,12 +57,7 @@
 
             </div>
         </div>
-
     </header>
-
-
-
-
     <!-- _____________________________SECTION search -->
     <section class="search">
         <div class="container-fluid">
@@ -79,24 +74,171 @@
                 <div class="serch__inner-box1"></div>
                 <div class="serch__inner-box2"></div>
                 <div class="serch__inner-box">
-                    <form class="kurwa">
+                    <form class="serch__down">
                         <input type="text" placeholder="Search product here...">
                         <button class="search-nav">All Categories</button>
                         <div class="form-btn">
                             <button class="Search Now">Search Now</button>
                         </div>
                     </form>
-
                 </div>
                 <div class="serch__inner-box1"></div>
                 <div class="serch__inner-box2"></div>
             </div>
-
         </div>
-
-
-
     </section>
+
+
+    <!-- _____________________________SECTION search -->
+
+
+    <section class="info">
+        <div class="container">
+            <div class="info__inner">
+                <div class="info__page">
+                    <div class="info__img" style="background-image: url(images/icons/book.png);"></div>
+                    <div class="info__title">Best UX Research</div>
+                    <div class="info__text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut
+                        scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</div>
+                </div>
+                <div class="info__page">
+                    <div class="info__img" style="background-image: url(images/icons/table.png);"></div>
+                    <div class="info__title">Fully Responsive</div>
+                    <div class="info__text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut
+                        scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</div>
+                </div>
+                <div class="info__page">
+                    <div class="info__img" style="background-image: url(images/icons/tel.png); "></div>
+                    <div class="info__title">Buy & Sell Easily</div>
+                    <div class="info__text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut
+                        scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- _____________________________SECTION weekly slider -->
+    <section class="slider__featured">
+        <div class="container">
+            <div class="slider__featured-inner">
+                <div class="slider-inner__wrap">
+                    <div class="slider-inner__bar">
+                        <div class="slider-inner__bar-title">
+                            Weekly Featured Products
+                        </div>
+                    </div>
+                    <div class="slider-top">
+                        <div class="slider-inner__box">
+                            <div class="slider-inner__img" style="background-image: url(images/press.jpg);"></div>
+                            <div class="slider-inner__info">
+                                <div class="slider-inner__info-title">One Page Resume Template</div>
+                                <div class="slider-inner__author">
+                                    <a class="slider-inner__name" href="#">AazzTech</a>
+                                    <a class="slider-inner__work" href="#">WordPress</a>
+                                </div>
+                                <div class="slider-inner__info-text">Nunc placerat mi id nisi interdum mollis. Praesent
+                                    pharetra, justo ut
+                                    scelerisque
+                                    the mattis, leo quam aliquet diam
+                                    congue is laoreet elit metus.</div>
+                                <ul class="slider-inner__plagins">
+                                    <li>website</li>
+                                    <li>plugin</li>
+                                    <li>landing page</li>
+                                </ul>
+                                <div class="slider-inner__info-bottom">
+                                    <div class="slider-inner__info-price">$10 - $50</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slider-inner__box">
+                            <div class="slider-inner__img" style="background-image: url(images/press.jpg);"></div>
+                            <div class="slider-inner__info">
+                                <div class="slider-inner__info-title">One Page Resume Template</div>
+                                <div class="slider-inner__author">
+                                    <a class="slider-inner__name" href="#">AazzTech</a>
+                                    <a class="slider-inner__work" href="#">WordPress</a>
+                                </div>
+                                <div class="slider-inner__info-text">Nunc placerat mi id nisi interdum mollis. Praesent
+                                    pharetra, justo ut
+                                    scelerisque
+                                    the mattis, leo quam aliquet diam
+                                    congue is laoreet elit metus.</div>
+                                <ul class="slider-inner__plagins">
+                                    <li>website</li>
+                                    <li>plugin</li>
+                                    <li>landing page</li>
+                                </ul>
+                                <div class="slider-inner__info-bottom">
+                                    <div class="slider-inner__info-price">$10 - $50</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slider-inner__box">
+                            <div class="slider-inner__img" style="background-image: url(images/press.jpg);"></div>
+                            <div class="slider-inner__info">
+                                <div class="slider-inner__info-title">One Page Resume Template</div>
+                                <div class="slider-inner__author">
+                                    <a class="slider-inner__name" href="#">AazzTech</a>
+                                    <a class="slider-inner__work" href="#">WordPress</a>
+                                </div>
+                                <div class="slider-inner__info-text">Nunc placerat mi id nisi interdum mollis. Praesent
+                                    pharetra, justo ut
+                                    scelerisque
+                                    the mattis, leo quam aliquet diam
+                                    congue is laoreet elit metus.</div>
+                                <ul class="slider-inner__plagins">
+                                    <li>website</li>
+                                    <li>plugin</li>
+                                    <li>landing page</li>
+                                </ul>
+                                <div class="slider-inner__info-bottom">
+                                    <div class="slider-inner__info-price">$10 - $50</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slider-inner__box">
+                            <div class="slider-inner__img" style="background-image: url(images/press.jpg);"></div>
+                            <div class="slider-inner__info">
+                                <div class="slider-inner__info-title">One Page Resume Template</div>
+                                <div class="slider-inner__author">
+                                    <a class="slider-inner__name" href="#">AazzTech</a>
+                                    <a class="slider-inner__work" href="#">WordPress</a>
+                                </div>
+                                <div class="slider-inner__info-text">Nunc placerat mi id nisi interdum mollis. Praesent
+                                    pharetra, justo ut
+                                    scelerisque
+                                    the mattis, leo quam aliquet diam
+                                    congue is laoreet elit metus.</div>
+                                <ul class="slider-inner__plagins">
+                                    <li>website</li>
+                                    <li>plugin</li>
+                                    <li>landing page</li>
+                                </ul>
+                                <div class="slider-inner__info-bottom">
+                                    <div class="slider-inner__info-price">$10 - $50</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
